--- a/login.css
+++ b/login.css
@@ -231,6 +231,7 @@ button:hover {
     border: 1px solid #888;
     border-radius: 10px;
     max-width: 500px;
+    min-width: 500px;
     position: relative;
 }
 
